# valentBind

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
.github/workflows/: code-quality.yml  pytest.yml
examples/: common.py  example.bngl  figure3.py  figure4.py
tests/: test_model.py  test_valentbind.py
valentbind/: __init__.py  model.py
valentbind/test/: test_model.py
