[tool.poetry]
name = "valentBind"
version = "0.1.0"
description = "The multivalent binding model implemented in Python."
authors = ["Aaron Meyer <ameyer@ucla.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26"
scipy = "^1.12"
jax = ">=0.4"
jaxlib = ">=0.4"
jaxopt = ">=0.8"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
mypy = "^1.9"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
