[project]
name = "valentBind"
version = "0.1.0"
description = "The multivalent binding model implemented in Python."
authors = [
    { name = "Aaron Meyer", email = "ameyer@ucla.edu" }
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "jax>=0.4",
    "jaxlib>=0.4",
    "jaxopt>=0.8",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["valentbind"]
