[project]
name = "valentBind"
version = "0.1.0"
description = "The multivalent binding model implemented in Python."
authors = [
    { name = "Aaron Meyer", email = "ameyer@ucla.edu" }
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "jax>=0.4",
    "jaxlib>=0.4",
    "jaxopt>=0.8",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["valentbind"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
